--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -19,12 +19,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install httpx
       - name: Lint with flake8
         run: |
           pip install flake8
           flake8 app
       - name: Run tests
         run: |
-          pip install pytest
+          export PYTHONPATH=.
           pytest 
